--- a/VCELIN/package.json
+++ b/VCELIN/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "mongodb": "^6.9.0",
     "pg": "^8.13.0"
   }
